Add openj9 support